# market-test

./: docker-compose.yml  pyproject.toml
market-app/: .env.template  main.py
market-app/alembic/: env.py
market-app/alembic/versions/: 2024_10_22_1154-40473b3d5fe2_create_products_and_categories_tables.py
market-app/api/: __init__.py
market-app/api/api_v1/: __init__.py  categories.py
market-app/api/api_v1/crud/: category.py
market-app/core/: config.py
market-app/core/models/: __init__.py  base_model.py  category.py  database.py  db_connector.py  product.py
market-app/core/schemas/: category.py
